--- a/src/app/components/cart-details/cart-details.component.html
+++ b/src/app/components/cart-details/cart-details.component.html
@@ -35,7 +35,7 @@
 
                             </div>
                             <p>Sub-total {{item.unitPrice * item.quantity | currency:'USD'}}</p>
-                            <button (click) ="remove(item)" class="btn btn-danger" role="button" onclick="return confirm('Are you sure remove this ?')">
+                            <button (click) ="remove(item)" class="btn btn-danger" role="button">
                                 Remove
                             </button>
                         </td>
@@ -45,7 +45,7 @@
                         <td><b>Total Quantity:{{totalQuantity}}</b>
                             <p>Shipping FREE</p>
                             <b>Total Price: {{totalPrice | currency: 'USD'}}</b><br>
-                            <a href="checkout-page.html" class="primary-btn">Checkout</a>
+                            <a href="/checkout" class="primary-btn">Checkout</a>
                         </td>
                     </tr>
 
